k8s/base/executor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: executor
  labels:
    app: executor
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: executor
  template:
    metadata:
      labels:
        app: executor
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
        prometheus.io/path: "/metrics"
    spec:
      hostUsers: false
      tolerations:
        - key: "executor-only"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      nodeSelector:
        cloud.google.com/gke-nodepool: executor
      containers:
        - name: executor
          image: executor
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 1Gi
              cpu: "1"
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
                - SYS_CHROOT
                - SETUID
                - SETGID
                - NET_ADMIN
              drop:
                - ALL
            procMount: Unmasked
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
