k8s/base/centrifugo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: centrifugo
  labels:
    app: centrifugo
  annotations:
    cloud.google.com/backend-config: '{"default":"centrifugo-backend-config"}'
    cloud.google.com/neg: '{"ingress":true}'
spec:
  type: ClusterIP
  selector:
    app: centrifugo
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
