k8s/base/executor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: executor
spec:
  type: ClusterIP
  selector:
    app: executor
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
