k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api
  labels:
    app: go-api
spec:
  type: ClusterIP
  selector:
    app: go-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
